# Tyche

./: .gitignore  README.md  pyproject.toml  run_on_new_machine.sh  tyche_poc.ipynb
benchmarks/: test_bench_throughput.py
src/tyche/: __init__.py  algorithm.py  backend.py  backend_jax.py  backend_pallas.py  config.py  interface.py
src/tyche.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_smoke.py
tests/crush/: README.md  interleaved_diffindex.py  interleaved_independent.py  practrand_utils.py  stream.py  test_bigcrush.py  test_crush.py  test_smallcrush.py  test_split_independence.py
tests/crush/bridge/: Makefile  testu01_bridge.c
tests/crush/bridge/PractRand/tools/: RNG_from_name.h  RNG_test.cpp
tests/crush/docker/: Dockerfile
tests/jax_compat/: test_against_builtin.py  test_jit.py  test_vmap.py
tests/statistical/: test_adversarial.py  test_avalanche.py  test_bits.py  test_indipendence.py  test_uniformity.py
tests/unit/: test_fold_in.py  test_random_bits.py  test_seed.py  test_split.py
