[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyche"
version = "0.1.0"
description = "Tyche — a custom JAX-compatible pseudo-random number generator"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
pythonpath = ["src", "tests"]
markers = [
    "statistical: slow statistical quality tests (deselect with '-m not statistical')",
    "crush: PractRand crush tests (require RNG_test binary on PATH)",
    "benchmark: performance benchmarks",
]

[tool.setuptools.packages.find]
where = ["src"]